@@ -1,3 +1,7 @@
+Travel::Status::DE::IRIS 1.92 - Tue Dec 12 2023
+
+    * Update meta database (accidentally omitted in 1.91)
+
 Travel::Status::DE::IRIS 1.91 - Sun Dec 10 2023
 
     * Update stations list. Frohes neues Fahrplanjahr.
